# Eigen

./: .gitignore  CMakeLists.txt  __eigen.cpp  __eigen.hpp  __eigenHelpers.cpp  __noneSlic.cpp  __pixel.cpp  __slic.cpp  __view.cpp  _eigenframes.cpp  _slicAlgorithm.cpp  _slicAlgorithm.hpp  readme.md  testMeta.csv  trainMeta.csv
data/: __metadata.csv  _color1.csv  _color3.csv  _x.csv  _y.csv  cents.csv  centsAverage.csv  centsAveragemeta.csv  centslabels.csv  centsmeta.csv  diff.csv  diffAverage.csv  diffAveragelabels.csv  diffAveragemeta.csv  difflabels.csv  diffmeta.csv  eigenfacesModel.yml
data/298, There are 69721frames/: cents.csv  centsmeta.csv  difflabels.csv
video/handwaving/: changefilenames.py
video/walking/: editMeta.py  meta.csv
